Bug 211597 - Kopete crashed when i close conversation window and incoming message recieved
Summary: Kopete crashed when i close conversation window and incoming message recieved
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-23 23:25 UTC by s.zelman
Modified: 2009-12-25 00:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description s.zelman 2009-10-23 23:25:04 UTC
Application that crashed: kopete
Version of the application: 0.80.2
KDE Version: 4.3.2 (KDE 4.3.2)
Qt Version: 4.5.3
Operating System: Linux 2.6.31-ARCH x86_64

What I was doing when the application crashed:
Kopete crashed when i close conversation window and incoming message recieved - program ask for really close window, if i click to NO, kopete crashing

 -- Backtrace:
Application: Kopete (kopete), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f534462d750 (LWP 4316))]

Thread 2 (Thread 0x7f532af6c910 (LWP 4415)):
#0  0x00007f5340762dd9 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f5341e1dc6b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f533f047c9c in ?? () from /usr/lib/libQtNetwork.so.4
#3  0x00007f5341e1cba5 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f534075e57a in start_thread () from /lib/libpthread.so.0
#5  0x00007f5340c8c8ed in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f534462d750 (LWP 4316)):
[KCrash Handler]
#5  0x00007f5341f17213 in QMetaObject::activate(QObject*, QMetaObject const*, int, int, void**) () from /usr/lib/libQtCore.so.4
#6  0x00007f5343d162cc in Kopete::ChatSession::messageAppended(Kopete::Message&, Kopete::ChatSession*) () from /usr/lib/libkopete.so.4
#7  0x00007f5343d19801 in Kopete::TemporaryKMMCallbackAppendMessageHandler::handleMessage(Kopete::MessageEvent*) () from /usr/lib/libkopete.so.4
#8  0x00007f5343d3bd12 in Kopete::ProcessMessageTask::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkopete.so.4
#9  0x00007f5341f16d3c in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#10 0x00007f5341f1bd7f in ?? () from /usr/lib/libQtCore.so.4
#11 0x00007f5341f10ce3 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#12 0x00007f53413b307c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#13 0x00007f53413ba34e in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#14 0x00007f5342b11586 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#15 0x00007f5341f01bfc in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#16 0x00007f5341f2d3e2 in ?? () from /usr/lib/libQtCore.so.4
#17 0x00007f5341f2a3f8 in ?? () from /usr/lib/libQtCore.so.4
#18 0x00007f533c7221fe in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#19 0x00007f533c725bb8 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#20 0x00007f533c725ce0 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#21 0x00007f5341f2a123 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#22 0x00007f534144614e in ?? () from /usr/lib/libQtGui.so.4
#23 0x00007f5341f00532 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#24 0x00007f5341f00904 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#25 0x00007f5341f02ab9 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#26 0x0000000000415666 in _start ()

Reported using DrKonqi
Comment 1 Roman Jarosz 2009-12-25 00:00:43 UTC
SVN commit 1065936 by rjarosz:

Don't crash if ChatSession was deleted for pending messages.

BUG: 211597



 M  +6 -2      kopetechatsession.cpp  
 M  +3 -1      kopetemessagehandlerchain.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1065936