Don't crash if ChatSession was deleted for pending messages.

BUG: 211597


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1065936